...
    <string name="stream_compose_channel_list_you">Вы</string>
    <string name="stream_compose_confirm">Подтвердить</string>
    <string name="stream_compose_copy_message">Копировать сообщение</string>
    <string name="stream_compose_delete_message">Удалить сообщение</string>
    <string name="stream_compose_delete_message_text">Удалить это сообщение?</string>
    <string name="stream_compose_delete_message_title">Удалить сообщение</string>
    <string name="stream_compose_disconnected">Нет соединения</string>
    <string name="stream_compose_dismiss">Закрыть</string>
    <string name="stream_compose_edit_answer">Изменить комментарий</string>
    <string name="stream_compose_edit_message">Изменить сообщение</string>
    <string name="stream_compose_emoji_picker_title">Выбор эмодзи</string>
    <string name="stream_compose_file_preview">Файл</string>
    <string name="stream_compose_flag_message">Пожаловаться на сообщение</string>
...
